[gd_scene load_steps=6 format=3 uid="uid://doweqob2otke5"]

[ext_resource type="Script" uid="uid://ddcvc5nywcb0s" path="res://kaitlin/scenario_2.gd" id="1_1528s"]
[ext_resource type="PackedScene" uid="uid://cpdy0w1wcne" path="res://kaitlin/paper.tscn" id="1_ax1ms"]
[ext_resource type="PackedScene" uid="uid://tnaanu1nhxny" path="res://kaitlin/stamp.tscn" id="2_1528s"]
[ext_resource type="Texture2D" uid="uid://nh2of5n36axe" path="res://kaitlin/Mayors_Office_Updated.png" id="2_ngay5"]
[ext_resource type="PackedScene" uid="uid://ctxeqkgkr6p31" path="res://reann(2)/urban_sprawler.tscn" id="5_hjiln"]

[node name="scenario2" type="Node2D"]
script = ExtResource("1_1528s")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ngay5")
centered = false

[node name="paper1" parent="." instance=ExtResource("1_ax1ms")]
position = Vector2(98, 508)

[node name="paper2" parent="." instance=ExtResource("1_ax1ms")]
position = Vector2(309, 462)

[node name="paper3" parent="." instance=ExtResource("1_ax1ms")]
position = Vector2(804, 474)

[node name="paper4" parent="." instance=ExtResource("1_ax1ms")]
position = Vector2(1028, 490)

[node name="stamp" parent="." instance=ExtResource("2_1528s")]
position = Vector2(1075, 307)

[node name="sprawler" parent="." instance=ExtResource("5_hjiln")]
position = Vector2(227, -40)
